--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	overflow-x: hidden;
+	overflow-x: clip;
 }
 a {
 	text-decoration: none;
